<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="use_my_location">Use My Location</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="correspondence_information">Correspondence Information</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="follow_election">Follow Election</string>
    <string name="location_access_denied">Please enable location access to retrieve your current address for you!</string>
    <string name="no_address_provided">Please input your address to search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="state">State</string>

    <!-- TODO: Add necessary string values -->

</resources>
