<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/padding_default"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.voterInfo.election.name}"
            app:titleTextColor="@color/white" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_default"
            app:electionDay="@{viewModel.voterInfo.election.electionDay}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/state_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.infoLoaded}"
            app:constraint_referenced_ids="state_header, location_layout, ballot_layout, state_correspondence_header"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/election_information"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.setTargetUrl(viewModel.administrationBody.votingLocationFinderUrl)}"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header">

            <TextView
                android:id="@+id/state_locations"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_small"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/voting_locations" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                app:srcCompat="@drawable/ic_www" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ballot_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewModel.setTargetUrl(viewModel.administrationBody.ballotInfoUrl)}"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_layout">


            <TextView
                android:id="@+id/state_ballot"
                android:layout_width="wrap_content"
                android:padding="@dimen/padding_small"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:text="@string/ballot_information" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                app:srcCompat="@drawable/ic_www" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.hasAddress}"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@string/correspondence_information"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/ballot_layout" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:text="@{viewModel.administrationBody.correspondenceAddress.toFormattedString()}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <Button
            android:id="@+id/save_button"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:onClick="@{() -> viewModel.saveButtonClicked(viewModel.voterInfo.election)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>